[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "proxyorderedset"
version = "0.3.1"
authors = [
  { name="Dominic Steinhöfel", email="dominic.steinhoefel@cispa.de" },
]
description = "A simple implementation of ordered sets as a proxy to Python's standard dict class."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
"Homepage" = "https://github.com/rindPHI/proxyorderedset/"
"Bug Tracker" = "https://github.com/rindPHI/proxyorderedset/issues"