[metadata]
name = proxyorderedset
version = attr: orderedset.__version__
author = Dominic Steinhöfel
author_email = dominic.steinhoefel@cispa.de
description = A simple implementation of ordered sets as a proxy to Python's standard dict class.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rindPHI/proxyorderedset
project_urls =
    Bug Tracker = https://github.com/rindPHI/proxyorderedset/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    frozendict>=2.3.2

[options.extras_require]
test =
    pytest-cov>=3.0.0
    pytest-forked>=1.3.0
    pytest-html>=3.1.1
    pytest-profiling>=1.7.0
    pytest-pycharm>=0.7.0
    pytest-rerunfailures>=10.2
    pytest-xdist>=2.4.0
    pytest>=7.1.2

[options.packages.find]
where = src